new.plone.org/static/plone.css
/* ... */
a:link, a:visited {
	color: #205c90;
}

a:link:hover {
	color: #75ad0a;
}

#outer-wrapper {
	background: left 0px url("images/nav-gradient.png") repeat-x;
	background-color: white;
}
#inner-wrapper {
	border-top: 2px solid white;
	background: url(images/footer-gradient.png) repeat-x;
	background-position: bottom left;
	padding-bottom: 2em;
	clear:both;
}

#content-wrapper {
	width: 937px;
	margin: 0 auto 0 auto;
}

/* @end */

/* @group Navigation/search */

#nav {
/* Should be named header, but conflicts with the accordion.js for now */
	width: 937px;
	margin: 0 auto;
	font-family: "Helvetica Neue", Arial;
}

#main-nav {
	font-size: 14px;
	line-height: 28px;
}

#main-nav li:first-child a {
	/*XXX TODO: mini-logo goes here*/
	/*color: transparent;*/
}

#main-nav li:first-child a {
	border-left: none;
	/*padding-left: 0;*/
}

#sub-nav {
	font-size: 13px;
	line-height: 30px;
	border-top: 1px solid #dcdcdc;
	margin-right: 210px;
}

#sub-nav li a {
	border-right: none;
}

ul.navigation li a,
ul.navigation li a:visited {
	padding: 6px 8px;
	color: Black;
	font-weight: bold;
	border-right: 1px solid #dcdcdc;
	border-left: 1px solid white;
}

ul.navigation li a:hover {
	color: #75ad0a;
}

ul.navigation li.selected a,
ul.navigation li.active a {
	color: #75ad0a;
	padding: 6px 8px 5px 8px;
	border-bottom: 2px solid white;
	border-left: 1px solid white;
}


#search {
	float: right;
	position: relative;
	background: url(images/search-wrapper.png) no-repeat;
	height: 20px;
	padding: 10px 25px;
	margin-top: -2px;
}

#user {
	font-size: 14px;
	width: 135px;
	height: 14px;
	overflow: hidden;
	float: right;
	padding: 5px 4px;
}

#user a {
	color: #666;
	font-weight: bold;
	padding: 2px;
}

#user a:hover {
	background-color: #666;
	color: White;
}

/* @end */

#logo-wrapper {
	width: 937px;
	margin: 0 auto;
}

#logo {
	margin: 25px 22px;
}


/* @group Splash pages */

div.splash {
	font-family: "Helvetica Neue", Arial, sans-serif;
	background-color: #205c90;
	color: White;
	min-height: 196px;

	border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
}

div.splash h1 {
	padding: 1em 0.5em 0 260px !important;
	font-weight: bold;
	font-size: 26px;
	line-height: 32px;
	letter-spacing: -1px;

}

div.splash h2 {
	padding: 0 0 0 387px;
	font-weight: bold;
	font-size: 22px;
	line-height: 28px;
	letter-spacing: -1px;
}

div.splash p {
	padding: 20px 0 0 260px;
	font-size: 12px;
	font-weight: bold;
}

div.splash a {
	color: White;
	float: right;
	line-height: 16px;
	margin-right: 32px;
	padding-right: 16px;
	background: right top url(images/arrow-white.png) no-repeat;
	display: block;
}

div.pullout {
	background-color: #87B829;
	color: White;
	min-height: 172px;
	padding: 1.5em 15px 0 3em;
	margin-bottom: 24px;
	margin-left: -1em;

	border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
}

div.pullout h2 {
	font-size: 24px;
	margin-bottom: 0.5em;
}

div.pullout p,
div.pullout ul,
div.pullout ol {
	font-size: 12px;
	margin-bottom: 1em;
}

div.pullout li {
	display: block;
}

div.pullout a {
	color: White;
}

div.pullout li a:before {
	content: "→ ";
}

/*TODO: #sidebar & .sidebar need to be consolidated*/
#sidebar {
	padding-top: 2em;
}

div.sidebar {
	padding-top: 0.5em;
	margin-left: 1em;
}


div.sidebar ul li a {
	line-height: 36px;
	font-size: 18px;
	display: block;
	border-top: 1px solid #eee;
	font-weight: bold;
	background: left 9px url(images/arrow-blue.png) no-repeat;
	padding-left: 16px;
	letter-spacing: -1px;
}

div.sidebar ol li {
	line-height: 18px;
	font-size: 11px;
	display: block;
	border-top: 1px solid #eee;
	margin-bottom: 0.5em;
	padding-top: 0.5em;
	clear: both;
}

div.sidebar ol li a {
	font-weight: bold;
	display: block;
}

img.book-cover {
	float: left;
	display: block;
	padding: 2px;
	border: 1px solid #ddd;
	margin: 5px 15px 10px 0;
}

/* @group Page-specific splash styles */

#splash-frontpage {
	min-height: 284px !important;
	margin: 0 1em 1em 0;
/*	background: #205c90 url(images/splash-bg.jpg) no-repeat;*/
	/*margin-top: 0;*/
	/*width: 676px;*/
}
#splash-frontpage h1 {
	padding: 20px 18px !important;
}

#splash-frontpage p {
	padding: 20px 0 0 387px;
}

#splash-downloads {
	background-image:url(images/plone-box.png);
	background-repeat:no-repeat;
	background-position: 5em 2em;
}

#splash-enterprise {
	background: #205c90 url(images/splash-enterprise.jpg) no-repeat;
}

/* @end */



/* @end */

/* @group Listings */

/* @group Documentation tile */

div.pane {
	background-color: #eee;
	padding: 10px;
	clear: left;
	border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
}

div.pane h1 {
	padding-bottom: 0.5em;
	padding-left: 10px;
}

a.versions {
	font-size: 12px;
	color: #555;
	padding: 2px;
}

a.versions:hover {
	background-color: #666;
	color: White;
}

div.pagesearch {
	float: right;
	font-size: 11px;
	padding-right: 10px;
}

div.pagesearch input {
	color: #666;
}

#categories {
	background-color: white;
	padding: 10px;
	/*margin-top: 8px; compensate for corners*/ 
	border-radius: 0.5em;
	-webkit-border-radius: 0.5em;
	-moz-border-radius: 0.5em;
}

#categories h3 {
	border-top: 1px solid #ccc;
	font-size: 14px;
}

#categories h3 a {
	display: block;
	padding: 0.5em 0 0.5em 0;
}

#categories h3.selected a {
	/*padding-left: 1.25em;*/
	color: black;
	cursor: default;
}

#categories h3 a:before {
	content: "▶ ";
}

#categories h3.selected a:before {
	content: "▼ ";
	/*content: "";*/
}


#categories p {
	font-size: 11px;	
}

ul.topic {
	font-size: 12px;
}

ul.topic li {
	display: inline-block !important;	
	vertical-align: top;
	width: 29.5%;
	margin: 0 0 1em 1.5em;
	text-align: justify;
}



/* @end */

/* @group Downloads tile */

/* Refactor these */

#download-plone {
	background-image:url(images/download-plone.png);
	background-repeat:no-repeat;
	height:58px;
	width:300px;
	margin:10px 0px 10px 260px;
}	

div.downloadssearch {
	float: right;
	font-size: 11px;
	padding-right: 10px;
}
/* ... */

